Bug 427200 - System settings hangs after cancelling adding Online Account
Summary: System settings hangs after cancelling adding Online Account
Status: RESOLVED FIXED
Alias: None
Product: KAccounts
Classification: Frameworks and Libraries
Component: KCM (other bugs)
Version First Reported In: 20.08
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-01 10:51 UTC by elman
Modified: 2020-11-11 23:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description elman 2020-10-01 10:51:28 UTC
SUMMARY
When Nextcloud server is not accessible (e.g. untrusted certificate) cancelling the process of adding an account hangs and System Settings can't be started.

STEPS TO REPRODUCE
1. Open Online Accounts and add new Nextcloud account
2. Fill in server URL and click next
3. New window appears with browser error (e.g. certificate is not trusted)
4. Close window with browser error
5. Close window with server URL
6. Close System settings
7. Start System settings

OBSERVED RESULT
System settings are not shown. When checking processes, it is running (assuming from previous instance).

EXPECTED RESULT
System settings should be shown.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Stable
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Comment 1 Bug Janitor Service 2020-11-10 22:55:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kaccounts-providers/-/merge_requests/21
Comment 2 Nicolas Fella 2020-11-11 10:51:28 UTC
Git commit 46a3cbd7822d5fc398957b7d08650b5b70c3f497 by Nicolas Fella.
Committed on 11/11/2020 at 10:50.
Pushed by nicolasfella into branch 'master'.

[*cloud] Cancel configuration when window is closed

Otherwise the account creation job is never finished, preventing the calling application from quitting.

M  +12   -2    plugins/nextcloud-ui/nextcloud.cpp
M  +5    -0    plugins/nextcloud-ui/nextcloudcontroller.cpp
M  +2    -0    plugins/nextcloud-ui/nextcloudcontroller.h
M  +4    -0    plugins/nextcloud-ui/package/contents/ui/main.qml
M  +12   -2    plugins/owncloud-ui/owncloud.cpp
M  +5    -0    plugins/owncloud-ui/owncloudcontroller.cpp
M  +2    -0    plugins/owncloud-ui/owncloudcontroller.h
M  +4    -0    plugins/owncloud-ui/package/contents/ui/main.qml

https://invent.kde.org/network/kaccounts-providers/commit/46a3cbd7822d5fc398957b7d08650b5b70c3f497
Comment 3 Nicolas Fella 2020-11-11 23:51:36 UTC
Git commit b946a4c342c363b7f5072749d3274bad768c1d06 by Nicolas Fella.
Committed on 11/11/2020 at 23:51.
Pushed by nicolasfella into branch 'release/20.12'.

[*cloud] Cancel configuration when window is closed

Otherwise the account creation job is never finished, preventing the calling application from quitting.

M  +12   -2    plugins/nextcloud-ui/nextcloud.cpp
M  +5    -0    plugins/nextcloud-ui/nextcloudcontroller.cpp
M  +2    -0    plugins/nextcloud-ui/nextcloudcontroller.h
M  +4    -0    plugins/nextcloud-ui/package/contents/ui/main.qml
M  +12   -2    plugins/owncloud-ui/owncloud.cpp
M  +5    -0    plugins/owncloud-ui/owncloudcontroller.cpp
M  +2    -0    plugins/owncloud-ui/owncloudcontroller.h
M  +4    -0    plugins/owncloud-ui/package/contents/ui/main.qml

https://invent.kde.org/network/kaccounts-providers/commit/b946a4c342c363b7f5072749d3274bad768c1d06