[*cloud] Cancel configuration when window is closed

Otherwise the account creation job is never finished, preventing the calling application from quitting.

BUG: 427200