plugins/nextcloud-ui/nextcloud.cpp
@@ -39,14 +39,24 @@ void NextcloudWizard::init(KAccountsUiPlugin::UiType type)
         m_object->loadPackage(packagePath);
 
         NextcloudController *helper = new NextcloudController(m_object);
-        connect(helper, &NextcloudController::wizardFinished, this, &NextcloudWizard::success);
-        connect(helper, &NextcloudController::wizardFinished, [=] {
+
+        connect(helper, &NextcloudController::wizardFinished, this, [this](const QString &username, const QString &password, const QVariantMap &data) {
             QWindow *window = qobject_cast<QWindow *>(m_object->rootObject());
+
             if (window) {
                 window->close();
             }
+
             m_object->deleteLater();
+
+            Q_EMIT success(username, password, data);
         });
+
+        connect(helper, &NextcloudController::wizardCancelled, this, [this] {
+            m_object->deleteLater();
+            Q_EMIT cancelled();
+        });
+
         m_object->engine()->rootContext()->setContextProperty("helper", helper);
 
         m_object->completeInitialization();
