plugins/owncloud-ui/owncloud.cpp
@@ -37,14 +37,24 @@ void OwnCloudWizard::init(KAccountsUiPlugin::UiType type)
         m_object->loadPackage(packagePath);
 
         OwncloudController *helper = new OwncloudController(m_object);
-        connect(helper, &OwncloudController::wizardFinished, this, &OwnCloudWizard::success);
-        connect(helper, &OwncloudController::wizardFinished, [=] {
+
+        connect(helper, &OwncloudController::wizardFinished, this, [this](const QString &username, const QString &password, const QVariantMap &data) {
             QWindow *window = qobject_cast<QWindow *>(m_object->rootObject());
+
             if (window) {
                 window->close();
             }
+
             m_object->deleteLater();
+
+            Q_EMIT success(username, password, data);
         });
+
+        connect(helper, &OwncloudController::wizardCancelled, this, [this] {
+            m_object->deleteLater();
+            Q_EMIT cancelled();
+        });
+
         m_object->engine()->rootContext()->setContextProperty("helper", helper);
 
         m_object->completeInitialization();
